Fixed z-index and removed buttons

--- a/picu_vis2.css
+++ b/picu_vis2.css
@@ -195,6 +195,7 @@ body {
   height:90px;
   width:830px;
   position:fixed;
+  z-index: 1;
 }
 
 .grapharea {
